# my_flash_attention

./: .clangd  CMakeLists.txt  README.md  flash_attention.cu
include/: flash_attention.cuh  utils.cuh
tests/: CMakeLists.txt
